src/test/ui/issues/issue-33941.stderr
error[E0271]: type mismatch resolving `<std::collections::hash_map::Iter<'_, _, _> as Iterator>::Item == &_`
  --> $DIR/issue-33941.rs:4:36
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |                                    ^^^^^^ expected tuple, found reference
   |
   = note:  expected tuple `(&_, &_)`
           found reference `&_`

error[E0271]: type mismatch resolving `<std::collections::hash_map::Iter<'_, _, _> as Iterator>::Item == &_`
  --> $DIR/issue-33941.rs:4:14
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected reference, found tuple
   |
   = note: expected reference `&_`
                  found tuple `(&_, &_)`
   = note: required because of the requirements on the impl of `Iterator` for `Cloned<std::collections::hash_map::Iter<'_, _, _>>`
   = note: required because of the requirements on the impl of `IntoIterator` for `Cloned<std::collections::hash_map::Iter<'_, _, _>>`
   = note: required by `into_iter`

error[E0271]: type mismatch resolving `<std::collections::hash_map::Iter<'_, _, _> as Iterator>::Item == &_`
  --> $DIR/issue-33941.rs:4:14
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected reference, found tuple
   |
   = note: expected reference `&_`
                  found tuple `(&_, &_)`
   = note: required because of the requirements on the impl of `Iterator` for `Cloned<std::collections::hash_map::Iter<'_, _, _>>`
   = note: required by `std::iter::Iterator::next`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0271`.
